# CppCatchDaFlagMTA

./: .gitignore  CMakeLists.txt
CppCatchDaFlagMTA/: .gitignore  AbstractPlayer.h  AlgoBoardData.cpp  AlgoBoardData.h  AlgorithimPlayer.cpp  AlgorithmPlayer.h  AlgorithmRegisteration.h  AlgorithmRegistration.cpp  Board.cpp  Board.h  BoardData.h  BoardTool.cpp  BoardTool.h  CatchTheFlage_0.gboard  CatchTheFlage_0.moves-a_small  CatchTheFlage_0.moves-b_small  CppCatchDaFlagMTA.VC.db  CppCatchDaFlagMTA.cpp  CppCatchDaFlagMTA.sln  CppCatchDaFlagMTA.vcxproj  CppCatchDaFlagMTA.vcxproj.filters  Direction.h  FilePlayer.cpp  FilePlayer.h  Game.h  GameManager.cpp  GameManager.h  ManualPlayer.cpp  ManualPlayer.h  Menu.cpp  Menu.h  Move.h  Player.cpp  Player.h  Position.h  ReadMe.txt  SubMenu.h  Utils.cpp  Utils.h  _1.gboard  (+3 more)
CppCatchDaFlagMTA/Debug/: filesCatchTheFlage_1.moves-a  filesCatchTheFlage_1.moves-b
CppCatchDaFlagMTA/Debug/files/: CatchTheFlage_1.gboard  CatchTheFlage_1.moves-a  board_bad_1.gboard  board_bad_3.gboard  board_ok_1.moves-a_full
CppCatchDaFlagMTA/ipch/CPPCATCHDAFLAGMTA-9540a702/: CPPCATCHDAFLAGMTA-2d94e4d3.ipch
GameProject/: GameManager.cpp
files/: board_bad_2.gboard  board_ok_2.gboard  board_ok_2.moves-a_small
